--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,5 +1,5 @@
 .Nav {
-  background: white;
+  background: #f1f0dd;
   position: sticky;
   top: 0;
   z-index: 2;
@@ -79,7 +79,7 @@
   top: 100%;
   left: 0;
   width: auto;
-  background: white;
+  background: #f1f0dd;
   /* opacity: 0; */
   max-height: 0;
   overflow: hidden;
